[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/sprites/enemydrogadictosprite1.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=2]

[sub_resource type="Animation" id=2]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Walk"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 1, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0, 0, 0 ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 28.5, 69.5 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 67 )

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 4.48788, -4.49747 )
scale = Vector2( -0.310675, 0.310675 )
texture = ExtResource( 1 )
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 2 )
anims/RESET = SubResource( 3 )
anims/Walk = SubResource( 4 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 1, 0 )
collision_layer = 5
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -1.5, -5.5 )
shape = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -4 )
shape = SubResource( 1 )

[node name="RayCastBottom" type="RayCast2D" parent="."]
position = Vector2( -44, -64 )
enabled = true
cast_to = Vector2( 0, 142 )
collision_mask = 4

[node name="RayCastForward" type="RayCast2D" parent="."]
position = Vector2( -41, 60 )
enabled = true
cast_to = Vector2( -15, 0 )
collision_mask = 4
collide_with_areas = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
